k8s/basic/pod-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: db
spec:
  containers:
  - name: postgresql
    image: postgres:16.0-bullseye
    ports:
    - containerPort: 5432
