k8s/basic/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: sample-app
    image: snkshukla/sample_app:1.0.0
    ports:
    - containerPort: 3000
