k8s/basic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterclass-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: masterclass.getdevops.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
  tls:
    - hosts:
      - masterclass.getdevops.services
      secretName: web-tls
